# base-app

./: .gitignore  Dockerfile  README.md  Readme.md  app.py  basic_example.py  client_app.py  docker-compose.yml  face_embeddings.csv  face_transcription.csv  pyproject.toml  requirements.txt
basic_example/: logic_basic_example.py
face_detection/basic_example/: logic_basic_example.py  view_basic_example.py
gradio_base_app/: __main__.py  app.py  client_app.py  config.py
gradio_base_app/basic_example/: __init__.py  view_basic_example.py
scoreboard_padel/: __main__.py
scoreboard_padel/basic_example/: __init__.py  debug_logic.py  debug_pickles.py  logic_basic_example.py  reader.py  utils_files.py  view_basic_example.py
