[tool.poetry]
name = "face-detection"
version = "0.1.0"
description = ""
authors = ["titus fx <titusfx@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gradio = "^4.44.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gradio = "face_detection.app:main"
client-gradio = "face_detection.client_app:main"