[tool.poetry]
name = "face-detection"
version = "0.1.0"
description = ""
authors = ["titus fx <titusfx@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gradio = "^4.44.0"
ultralytics = "^8.2.92"
opencv-python = "^4.10.0.84"
dlib = "^19.24.6"
moviepy = "^1.0.3"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gradio = "face_detection.app:main"
client-gradio = "face_detection.client_app:main"