[tool.poetry]
name = "scoreboard-padel"
version = "0.1.0"
description = ""
authors = ["titus fx <titusfx@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gradio = "^4.44.0"
easyocr = "^1.7.2"
paddlepaddle = "^2.6.2"
paddleocr = "^2.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gradio = "scoreboard_padel.app:main"
client-gradio = "scoreboard_padel.client_app:main"